kubernetes/apps/media/immich/app/web/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames:
    - "immich.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ''
          kind: Service
          name: immich-server
          port: 3001
          weight: 1
    - backendRefs:
        - group: ''
          kind: Service
          name: immich-web
          port: 3000
          weight: 1
